--- a/localisation/english/MD_traits_l_english.yml
+++ b/localisation/english/MD_traits_l_english.yml
@@ -275,6 +275,7 @@
  CAT_vls_land_systems_research: "VLS Land Systems Research Speed"
  CAT_torpedoes_research: "Torpedoes Research Speed"
  CAT_landing_craft_research: "Landing Craft Research Speed"
+ CAT_industry_research: "Industry Research Speed"
 
  bold_attack_spirit: "Bold Attack"
  bold_attack_spirit_desc: "As the saying goes: a strong offense is the best defense."
