Game rule interface adjustment
Put country sub behavior setup to Focus tree options
Loc update

--- a/localisation/english/MD_focus_TUR_l_english.yml
+++ b/localisation/english/MD_focus_TUR_l_english.yml
@@ -1763,7 +1763,7 @@
  Turkey.8.a: "Let's hope for the best. Again."
  Turkey.8.b: "Throw our weight behind the §W[Conservative_L]§! candiate"
  Turkey.9.t: "[Conservative_L] Candidate Wins Presidency"
- Turkey.9.desc: "With support from the ruling §W[socialism_L]§, the §W[Conservative_L]§! candidate Nevzat Yalçıntaş has won the presidential election. This will surely boost the popularity of §W[Conservative_L]§!"
+ Turkey.9.desc: "With support from the ruling §W[socialism_L]§!, the §W[Conservative_L]§! candidate Nevzat Yalçıntaş has won the presidential election. This will surely boost the popularity of §W[Conservative_L]§!"
  Turkey.9.a: "Excellent"
  Turkey.10.t: "Constitution Calls for Snap Elections"
  Turkey.10.desc: "It seems that no candidate has gathered enough support to win the office of President. The Turkish constitution requires that in such a state a snap election must be held to break the deadlock.\n\nThe new parliament will elect a new President successfully"
