--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -596,8 +596,8 @@
  UKR_increase_health_desc: "If the debate in the Verkhovna Rada is §Gsuccessful§!, the law will be §Ychanged§!"
  UKR_decrease_health: "Request Less Funding for Healthcare"
  UKR_decrease_health_desc: "If the debate in the Verkhovna Rada is §Gsuccessful§!, the law will be §Ychanged§!"
- UKR_pension_open: "Start the §nPension§! Debate"
- UKR_pension_close: "End the §nPension§! Debate"
+ UKR_pension_open: "Start the §OPension§! Debate"
+ UKR_pension_close: "End the §OPension§! Debate"
  UKR_increase_pension: "Request More Pension Spending"
  UKR_increase_pension_desc: "If the debate in the Verkhovna Rada is §Gsuccessful§!, the law will be §Ychanged§!"
  UKR_decrease_pension: "Request Less Pension Spending"
