--- a/localisation/english/MD_map_modes_l_english.yml
+++ b/localisation/english/MD_map_modes_l_english.yml
@@ -38,9 +38,9 @@
 
  MAPMODE_INFLUENCE_MAP_MODE_NAME: "Influence"
  MAPMODE_INFLUENCE_MAP_MODE: "Influence"
- MAPMODE_INFLUENCE_MAP_MODE_DESCRIPTION: "This is a map mode that shows the countries who you have influenced, recently influenced, or set for monthly auto-influence.\n--------------\n§HLegend:§!\nPlayer - §GGreen§!\n1st Influencer: §CCyan§!\n2nd/3rd Influencer: §lLight Blue§!\n4th to 7th Influencer: §nNavy Blue§!\nAuto-Influenced Nation: §9Orange§!\nNations with Spread Influence Cooldown: §RRed§!\n\nThe map mode is updated weekly."
+ MAPMODE_INFLUENCE_MAP_MODE_DESCRIPTION: "This is a map mode that shows the countries who you have influenced, recently influenced, or set for monthly auto-influence.\n--------------\n§HLegend:§!\nPlayer - §GGreen§!\n1st Influencer: §CCyan§!\n2nd/3rd Influencer: §lLight Blue§!\n4th to 7th Influencer: §BNavy Blue§!\nAuto-Influenced Nation: §9Orange§!\nNations with Spread Influence Cooldown: §RRed§!\n\nThe map mode is updated weekly."
  influence_map_mode_tooltip: "Influence"
- influence_map_mode_tooltip_delayed: "This is a map mode that shows the countries who you have influenced, recently influenced, or set for monthly auto-influence.\n--------------\n§HLegend:§!\nPlayer - §GGreen§!\n1st Influencer: §CCyan§!\n2nd/3rd Influencer: §lLight Blue§!\n4th to 7th Influencer: §nNavy Blue§!\nAuto-Influenced Nation: §9Orange§!\nNations with Spread Influence Cooldown: §RRed§!\n\nThe map mode is updated weekly."
+ influence_map_mode_tooltip_delayed: "This is a map mode that shows the countries who you have influenced, recently influenced, or set for monthly auto-influence.\n--------------\n§HLegend:§!\nPlayer - §GGreen§!\n1st Influencer: §CCyan§!\n2nd/3rd Influencer: §lLight Blue§!\n4th to 7th Influencer: §BNavy Blue§!\nAuto-Influenced Nation: §9Orange§!\nNations with Spread Influence Cooldown: §RRed§!\n\nThe map mode is updated weekly."
  MAPMODE_GCC_MAP_MODE_NAME: "GCC"
  MAPMODE_GCC_MAP_MODE: "GCC"
  MAPMODE_GCC_MAP_MODE_DESCRIPTION: "Member states (dark green) and potential member states (bright green) of the GCC."
