--- a/localisation/english/MD_focus_IND_l_english.yml
+++ b/localisation/english/MD_focus_IND_l_english.yml
@@ -1010,9 +1010,9 @@
  IND_IND_Aceh_insurgency_from_level_1_to_level_2: "Modify §YThe Insurgency in Aceh§! by \nOrganization Regain: §G+10%§! \nResistance Growth Speed: §G-5%§!\nCompliance: §G+5%§!\nMax Industries in State: §G+50%§!\nDivisions Speed: §G+5%§! \n"
  IND_IND_Aceh_insurgency_from_level_2_to_level_3: "Modify §YThe Insurgency in Aceh§! by \nOrganization Regain: §G+2%§! \nResistance Growth Speed: §G-5%§!\nCompliance §G+5%§!\nMax Industries in State: §G+15%§!\nDivisions Speed: §G+20%§! \n"
  IND_IND_Aceh_insurgency_from_level_3_to_level_4: "Modify §YThe Insurgency in Aceh§! by \nOrganization Regain: §G+1%§! \nResistance Growth Speed: §G-3%§!\nCompliance §G+2%§!\nMax Industries in State: §G+5%§!\n"
- IND_IND_Aceh_insurgency_from_level_4_to_level_5: "§GRemove The Insurgency in Aceh!§"
+ IND_IND_Aceh_insurgency_from_level_4_to_level_5: "§GRemove The Insurgency in Aceh§!"
  #FOCUS TOOL TIPS
- IND_quiet_now: "§YWill remove Ethnic Tensions or Mediating Ethnic Tensions national spirit. In order to complete this focus you must have completed all the decisions in the tab depending on which side you backed§"
+ IND_quiet_now: "§YWill remove Ethnic Tensions or Mediating Ethnic Tensions national spirit. In order to complete this focus you must have completed all the decisions in the tab depending on which side you backed§!"
  IND_q: "Will remove  §YEthnic Tensions§! or §YMediating Ethnic Tension§! \n§RRequires Ethnic Decisions to be completed§!"
  IND_sal_1: "Replace §YGrowing Radicalization§! with §YCrushing Radicalization§! Effective Change: \nDaily Salafist Gain: §G-1%§! \nWar Support: §R-4%§!\nResearch Speed §G+1%§!"
  IND_sal_2: "Modify §YCrushing Radicalization§! by \nDaily Salafist Gain: §G-1%§! \nWar Support: §R-4%§!"
