--- a/localisation/english/MD_focus_USA_l_english.yml
+++ b/localisation/english/MD_focus_USA_l_english.yml
@@ -3251,7 +3251,7 @@
  econ_event.21.o1: "Taylor & Murphy Construction Is Found Guilty"
  econ_event.21.o2: "Taylor & Murphy Construction Is Found Not Guilty"
  econ_event.22.t: "United States v. Bluestar Metal Recycling Co."
- econ_event.22.d: "Beginning at least as early as December 1993 and continuing until at least October 2001, the exact dates being unknown to the United States, the Defendant and co-conspirators entered into and engaged in a combination and conspiracy to suppress and eliminate competition by allocating suppliers in the purchase of ferrous and nonferrous scrap metal in Northeast Ohio. The charged combination and conspiracy unreasonably restrained interstate trade and commerce in violation of Section 1 of the Sherman Antitrust Act (15 U.S.C. § 1)."
+ econ_event.22.d: "Beginning at least as early as December 1993 and continuing until at least October 2001, the exact dates being unknown to the United States, the Defendant and co-conspirators entered into and engaged in a combination and conspiracy to suppress and eliminate competition by allocating suppliers in the purchase of ferrous and nonferrous scrap metal in Northeast Ohio. The charged combination and conspiracy unreasonably restrained interstate trade and commerce in violation of Section 1 of the Sherman Antitrust Act (15 U.S.C. Subject 1)."
  econ_event.22.o1: "Bluestar Is Found Guilty"
  econ_event.22.o2: "Bluestar Is Found Not Guilty"
  econ_event.23.t: "United States v. Duane Maynard"
