--- a/localisation/english/MD_middle_east_content_l_english.yml
+++ b/localisation/english/MD_middle_east_content_l_english.yml
@@ -971,7 +971,7 @@
  SAU.1.a: "Dramatic developments."
 
  SAU_2017_Riyadh_Summit.0.t: "2017 Riyadh Summit"
- SAU_Riyadh_Summit_tt: "§GIncreased Opinion Between All Muslim Countries§"
+ SAU_Riyadh_Summit_tt: "§GIncreased Opinion Between All Muslim Countries§!"
  SAU_2017_Riyadh_Summit.0.d: "The 2017 Riyadh summit is a series of three summits held on 20–21 May 2017 on the occasion of the visit of United States President Donald Trump to Saudi Arabia, his first trip overseas."
  SAU_2017_Riyadh_Summit.0.a: "Host it."
  SAU_2017_Riyadh_Summit.0.b: "No need."
